[STREAMPIPES-79] Improve layout of time selection

--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -31,8 +31,8 @@
                     multiple = true
                     (changeSelectedProperties)="setSelectedColumn($event)"
                     [availableProperties]="availableColumns"
-                    [selectedProperties]="selectedColumns"
-            ></sp-select-properties>
+                    [selectedProperties]="selectedColumns">
+            </sp-select-properties>
 
             <button mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()" color="white">
                 <i class="material-icons">get_app</i>
