--- a/ui/src/app/data-explorer/data-explorer.component.html
+++ b/ui/src/app/data-explorer/data-explorer.component.html
@@ -29,7 +29,22 @@
             </div>
         </div>
     </div>
-    <div class="fixed-height data-explorer-options" fxLayout="column" *ngIf="selectedIndex > 0">
+    <div class="fixed-height data-explorer-options" fxLayout="row" *ngIf="selectedIndex > 0">
+        <div class="data-explorer-options-item pl-10" fxLayoutAlign="start center" fxLayout="row">
+            <button mat-button color="primary" matTooltip="Save" [matTooltipPosition]="'above'" (click)="saveDashboard()">
+                <mat-icon>save</mat-icon>&nbsp;<span>Save</span>
+            </button>
+        </div>
+        <div class="data-explorer-options-item" fxLayoutAlign="start center" fxLayout="row">
+            <button mat-button color="primary" matTooltip="Add visualization" [matTooltipPosition]="'above'" (click)="addVisualization()">
+                <mat-icon>add</mat-icon>&nbsp;<span>Add visualization</span>
+            </button>
+        </div>
+        <div class="data-explorer-options-item" fxLayoutAlign="start center" fxLayout="row">
+            <mat-slide-toggle color="primary" [(ngModel)]="gridVisible" (ngModelChange)="toggleGrid()">
+                <span>Show grid</span>
+            </mat-slide-toggle>
+        </div>
         <div class="data-explorer-options-item" fxLayoutAlign="end center" fxFlex fxLayout="row">
             <sp-time-range-selector *ngIf="selectedIndex" (dateRangeEmitter)="updateDateRange($event)"></sp-time-range-selector>
         </div>
@@ -50,6 +65,7 @@
 
         </sp-data-explorer-dashboard-overview>
         <sp-data-explorer-dashboard-panel fxLayout="column"
+                                          #dashboardPanel
                                           [(editMode)]="editMode"
                                           [dashboard]="selectedDataViewDashboard"
                                           [viewDateRange]="viewDateRange"
