--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.css
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.css
@@ -30,6 +30,7 @@
 }
 
 .assemblyOptionsDataExplorer {
-    color: white;
+    background: #f6f6f6;
+    border-bottom: 1px solid #ccc;
     padding: 5px;
 }
