--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -16,6 +16,8 @@
  *
  */
 
+@import '../../../../scss/variables';
+
 .h-100 {
     height:100%;
 }
@@ -40,7 +42,7 @@
     display: flex;
     flex-flow: column;
     height: 100%;
-    border:0px solid black;
+    border:3px solid $sp-color-accent-light;
 }
 
 .box .row.content {
