--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxLayout="column" fxLayoutAlign="stretch">
-    <div class="assemblyOptions sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;margin-top: 0px;">
+    <div class="assemblyOptionsDataExplorer sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;margin-top: 0px;">
 
         <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
             <sp-select-properties
@@ -58,16 +58,6 @@
                     *ngIf="advancedSettingsActive"
                     (click)="updateData()" mat-button mat-icon-button color="white">
                 <i class="material-icons">autorenew</i>
-            </button>
-
-            <button mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()" color="white">
-                <i class="material-icons">get_app</i>
-            </button>
-<!--            <button mat-button mat-icon-button color="white" (click)="changeResolution()">-->
-<!--                <i class="material-icons">autorenew</i>-->
-<!--            </button>-->
-            <button mat-button mat-icon-button color="white" (click)="removeWidget()">
-                <i class="material-icons">clear</i>
             </button>
         </div>
     </div>
