--- a/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<mat-form-field appearance="outline" class="sp_form_field_wrapper">
+<mat-form-field appearance="standard" class="form-field-margin form-field-size-smaller">
     <mat-label>{{this.label}}</mat-label>
     <mat-select [ngModel]="this.selectedProperties" (selectionChange)="triggerSelectedProperties($event.value)" [multiple]="multiple">
         <mat-option *ngFor="let column of availableProperties" [value]="column" style="background-color: #FFFFFF">
