--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -19,58 +19,53 @@
 <div fxLayout="column" fxLayoutAlign="stretch">
     <div class="assemblyOptionsDataExplorer sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;margin-top: 0px;">
 
-        <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
-            <sp-select-properties
-                    label="Select Properties"
-                    multiple = true
-                    style="margin-right: 10px;"
-                    (changeSelectedProperties)="setSelectedColumn($event)"
-                    [availableProperties]="availableColumns"
-                    [selectedProperties]="selectedColumns">
-            </sp-select-properties>
+        <div fxFlex="100" fxLayout="row">
+            <div fxFlex="100" layout="row" fxLayoutAlign="start center" style="margin-left: 0px;margin-right: 0px;">
+                <sp-select-properties
+                        label="Select Properties"
+                        multiple = true
+                        style="margin-right: 10px;"
+                        (changeSelectedProperties)="setSelectedColumn($event)"
+                        [availableProperties]="availableColumns"
+                        [selectedProperties]="selectedColumns">
+                </sp-select-properties>
 
-            <sp-select-properties
-                    label="Select Label Column"
-                    multiple = false
-                    style="margin-right: 10px;"
-                    *ngIf="showLabelColumnSelection"
-                    (changeSelectedProperties)="setSelectedLabelColumn($event)"
-                    [availableProperties]="availableNonNumericColumns"
-                    [selectedProperties]="selectedNonNumericColumn">
-            </sp-select-properties>
+                <sp-select-properties
+                        label="Select Label Column"
+                        multiple = false
+                        style="margin-right: 10px;"
+                        *ngIf="showLabelColumnSelection"
+                        (changeSelectedProperties)="setSelectedLabelColumn($event)"
+                        [availableProperties]="availableNonNumericColumns"
+                        [selectedProperties]="selectedNonNumericColumn">
+                </sp-select-properties>
+                <sp-aggregate-configuration
+                        *ngIf="advancedSettingsActive"
+                        [(aggregationValue)]="aggregationValue"
+                        [(aggregationTimeUnit)]="aggregationTimeUnit">
+                </sp-aggregate-configuration>
 
-            <mat-slide-toggle [(ngModel)]="advancedSettingsActive" (change)="handlingAdvancedToggleChange()">Advanced</mat-slide-toggle>
-            <sp-aggregate-configuration
-                    *ngIf="advancedSettingsActive"
-                    [(aggregationValue)]="aggregationValue"
-                    [(aggregationTimeUnit)]="aggregationTimeUnit">
-            </sp-aggregate-configuration>
-
-            <sp-group-configuration
-                    [dimensionProperties]="dimensionProperties"
-                    *ngIf="advancedSettingsActive"
-                    [(groupValue)]="groupValue"
-                    [(showCountValue)]="showCountValue">
-            </sp-group-configuration>
-
-
-            <button
-                    *ngIf="advancedSettingsActive"
-                    (click)="updateData()" mat-button mat-icon-button color="white">
-                <i class="material-icons">autorenew</i>
-            </button>
+                <sp-group-configuration
+                        [dimensionProperties]="dimensionProperties"
+                        *ngIf="advancedSettingsActive"
+                        [(groupValue)]="groupValue"
+                        [(showCountValue)]="showCountValue">
+                </sp-group-configuration>
+                <button
+                        *ngIf="advancedSettingsActive"
+                        (click)="updateData()" mat-button mat-icon-button color="primary">
+                    <mat-icon>autorenew</mat-icon>
+                </button>
+            </div>
+            <div fxFlex fxLayoutAlign="end center">
+                <mat-slide-toggle color="primary" [(ngModel)]="advancedSettingsActive" (change)="handlingAdvancedToggleChange()">Aggregate</mat-slide-toggle>
+            </div>
         </div>
     </div>
-
-
-    <div style="width: 100%; height: 500px">
-
-
-        <div fxLayout="row">
+    <div fxFlex="100" fxLayout="column" style="width: 100%;">
+        <div fxLayout="column" fxFlex="100" fxLayoutAlign="center center">
             <sp-load-data-spinner *ngIf="showIsLoadingData"></sp-load-data-spinner>
-
             <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="viewDateRange"></sp-no-data-in-date-range>
-
             <!-- Chart -->
             <plotly-plot fxFlex
                          *ngIf="data !== undefined && !showNoDataInDateRange"
@@ -81,12 +76,7 @@
                          (relayout)="handleDefaultModeBarButtonClicks($event)"
                          (selecting)="selectDataPoints($event)">
             </plotly-plot>
-
         </div>
-
-
     </div>
-
-
 </div>
 
