--- a/ui/src/app/data-explorer/components/widgets/utils/load-data-spinner/load-data-spinner.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/load-data-spinner/load-data-spinner.component.html
@@ -16,11 +16,7 @@
   ~
   -->
 
-<div fxLayout="column" fxLayoutAlign="space-around center" >
-    <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
-        <mat-spinner></mat-spinner>
-    </div>
-    <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
-        <h3>Loading Data</h3>
-    </div>
+<div fxFlex="100" fxLayout="column" fxLayoutAlign="center center">
+    <mat-spinner [diameter]="50"></mat-spinner>
+    <h3>Loading Data</h3>
 </div>
