--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -50,6 +50,7 @@
 @import './sp/buttons';
 @import './sp/buttons.ng1';
 @import './sp/spinner';
+@import './sp/forms';
 @import './sp/dialog';
 @import './sp/pipeline-element-options';
 @import './sp/pipeline-element-loading';
