--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -61,6 +61,7 @@
 @import './sp/dialog.ng5';
 @import './sp/feedback.ng1';
 @import './sp/pipeline-assembly.scss';
+@import './sp/widgets.scss';
 
 @import './sp/input.ng1';
 @import './sp/documentation.ng1';
