--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.scss
@@ -16,6 +16,8 @@
  *
  */
 
+@import '../../../../../scss/variables';
+
 .table {
     width: 100%;
 }
@@ -29,8 +31,8 @@
     font-size:20px;
 }
 
-.assemblyOptionsDataExplorer {
-    background: #f6f6f6;
-    border-bottom: 1px solid #ccc;
-    padding: 5px;
+.column-header {
+    font-size:14px;
+    font-weight: bold;
+    color: #393939;
 }
