--- a/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
@@ -55,7 +55,7 @@
                                 <span *ngIf="widget.widgetIconName"><i class="{{widget.widgetIconName}}"></i></span>
                             </div>
                             <h4 mat-line>{{widget.widgetLabel}}</h4>
-                            <p mat-line>{{widget.widgetDescription}} - {{widget.widgetIconName}} </p>
+                            <p mat-line>{{widget.widgetDescription}}</p>
                         </mat-list-item>
                     </mat-list>
                 </div>
