[STREAMPIPES-193] Migrate core modules to Angular

--- a/ui/src/app/core-v2/components/streampipes/streampipes.component.scss
+++ b/ui/src/app/core-v2/components/streampipes/streampipes.component.scss
@@ -16,15 +16,8 @@
  *
  */
 
-import {FeedbackController} from "./feedback.controller";
+@import "../../../../scss/variables";
 
-declare const require: any;
-
-export let FeedbackComponent = {
-    template: require('./feedback.tmpl.html'),
-    bindings: {
-        closeFeedbackWindow: "&",
-    },
-    controller: FeedbackController,
-    controllerAs: 'ctrl'
-};
+.iconbar {
+  background: $sp-color-primary;
+}
