[STREAMPIPES-193] Remove AngularJS dependencies from package.json

--- a/ui/src/app/core-v2/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core-v2/components/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
   -->
 
 <mat-toolbar class="md-primary md-hue-2 top-nav" color="accent">
-    <div class="md-toolbar-tools" style="height:50px;max-height:50px;">
+    <div class="md-toolbar-tools" style="height:50px;max-height:50px;width:100%;">
         <div fxFlex="60" fxLayout fxLayoutAlign="start center">
             <h1 class="md-toolbar-tools" style="height:50px;max-height:50px;">
                 <div class="sp-darkblue"
