--- a/ui/src/scss/sp/buttons.scss
+++ b/ui/src/scss/sp/buttons.scss
@@ -83,6 +83,23 @@
     line-height: 10px;
 }
 
+.mat-raised-button.small-button-add {
+  padding: 0.25em 0.75em;
+  font-size: 0.8em;
+  max-height: 75px;
+  line-height: 25px;
+}
+
+.mat-raised-button.small-button-add-inverted {
+  padding: 0.25em 0.75em;
+  font-size: 0.8em;
+  max-height: 75px;
+  line-height: 25px;
+  background: white;
+  border: 1.5px solid $sp-color-accent;
+  color: $sp-color-accent
+}
+
 .mat-raised-button.mat-primary:hover:enabled {
   background: $sp-color-accent-light-blue;
   -webkit-transition: all 0.75s ease;
