[STREAMPIPES-193] Migrate loading bar, minor bug fixes to get rid of AngularJS imports

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -15,5 +15,5 @@
   ~ limitations under the License.
   ~
   -->
-
+<ngx-loading-bar [color]="'rgb(27, 20, 100)'"></ngx-loading-bar>
 <router-outlet></router-outlet>
