--- a/ui/src/app/core-v2/components/toolbar/toolbar.component.scss
+++ b/ui/src/app/core-v2/components/toolbar/toolbar.component.scss
@@ -16,26 +16,7 @@
  *
  */
 
-import * as angular from 'angular';
 
-export class DialogBuilder {
-
-    constructor() {
-
-    }
-
-    // TODO: Can't resolve
-    getDialogTemplate(controller, template) {
-        return {
-            controller: controller,
-            controllerAs: "ctrl",
-            bindToController: true,
-            template: template,
-            parent: angular.element(document.body),
-            clickOutsideToClose: false,
-            //scope: this.$scope,
-            //rootScope: this.$rootScope,
-            //preserveScope: true
-        }
-    }
+::ng-deep .cdk-overlay-pane .feedback-menu-content{
+  min-width:500px;
 }
