--- a/ui/src/app/info/about/about.component.html
+++ b/ui/src/app/info/about/about.component.html
@@ -28,7 +28,7 @@
             <div class="assemblyOptions sp-blue-bg" style="padding:5px;">
                 <h4>Resources</h4>
             </div>
-            <div class="sp-blue-border md-padding">
+            <div class="sp-blue-border p-10">
                 <ul>
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
@@ -88,7 +88,7 @@
             <div class="assemblyOptions sp-blue-bg" style="padding:5px;">
                 <h4>Community & Support</h4>
             </div>
-            <div class="sp-blue-border md-padding">
+            <div class="sp-blue-border p-10">
                 <ul>
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
@@ -123,7 +123,7 @@
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>If you like
-                                    StreamPipes, give us a star at <a
+                                    StreamPipes, give us a star on <a
                                             href="https://github.com/apache/incubator-streampipes">Github</a>
                                 </h5>
                             </div>
