--- a/ui/src/app/pipelines/pipelines.component.html
+++ b/ui/src/app/pipelines/pipelines.component.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
-        <div layout="row">
+        <div fxLayout="row">
             <button class="mr-10" mat-button mat-raised-button color="primary" (click)="startAllPipelines(true)"
                        [disabled]="checkCurrentSelectionStatus(false)">Start all pipelines
             </button>
